2005-11-05  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update for 0.1.8.

	* NEWS: Update for 0.1.8.

	* configure.ac: Update version to 0.1.8.

2005-11-04  Roger Leigh  <rleigh@debian.org>

	* Version 0.1.7.

	* debian/changelog: Update date.

	* NEWS: Update.

2005-11-04  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed items, and update new items.

	* README: Document new build dependencies.

	* schroot/schroot.conf.5.in: Add new chroot options to the examples.

	* schroot/schroot.conf: Add new chroot options to the examples.

	* schroot/schroot-setup.5.in: Document the setup and run scripts.

2005-11-03  Roger Leigh  <rleigh@debian.org>

	* debian/schroot.init: Use --quiet option to suppress an
	unnecessary error message.

	* schroot/schroot.c
	(main): If --quiet is used, don't print an error message if no
	chroots are defined.  Remove check for --quiet and --verbose, now
	moved to schroot_options_parse.

	* schroot/schroot-options.c
	(schroot_options_parse): Check if both --quiet and --verbose have
	been specified.

2005-11-02  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c
	(sbuild_session_run): Ensure child exit status is set to
	EXIT_FAILURE on session failure.
	(sbuild_session_init): Set child exit status to EXIT_SUCCESS by
	default.

	* debian/changelog: Document changes.

	* debian/rules (binary-arch): Use dh_installinit to install init
	script.

	* debian/schroot.init (NAME): New init script to perform session
	recovery at system startup.

2005-11-02  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.c
	(schroot_options_parse): Don't load all chroot configurations when
	in list mode.

2005-11-02  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.c
	(main): Delegate the decision about which chroot configuration
	files to load to schroot_options_parse.  Use
	sbuild_config_print_chroot_info to print chroot information.

	* schroot/schroot-options.h